Reesolve PayloadEncoder by codec. Stop using concrete classes like EncodedPayload in tests for non enclave api modules.