@@ -1,6 +1,7 @@
 package com.quorum.tessera.transaction;
 
 import com.quorum.tessera.data.MessageHash;
+import com.quorum.tessera.enclave.EncodedPayloadCodec;
 import com.quorum.tessera.enclave.PrivacyGroup;
 import com.quorum.tessera.enclave.PrivacyMode;
 import com.quorum.tessera.encryption.PublicKey;
@@ -22,6 +23,8 @@ public interface SendSignedRequest {
 
   Set<PublicKey> getMandatoryRecipients();
 
+  EncodedPayloadCodec getEncodedPayloadCodec();
+
   class Builder {
 
     private byte[] signedData;
@@ -32,11 +35,13 @@ public interface SendSignedRequest {
 
     private byte[] execHash = new byte[0];
 
-    private Set<MessageHash> affectedContractTransactions = Collections.emptySet();
+    private Set<MessageHash> affectedContractTransactions = Set.of();
 
     private PrivacyGroup.Id privacyGroupId;
 
-    private Set<PublicKey> mandatoryRecipients = Collections.emptySet();
+    private Set<PublicKey> mandatoryRecipients = Set.of();
+
+    private EncodedPayloadCodec encodedPayloadCodec;
 
     public static Builder create() {
       return new Builder() {};
@@ -77,7 +82,13 @@ public interface SendSignedRequest {
       return this;
     }
 
+    public Builder withEncodedPayloadCodec(EncodedPayloadCodec encodedPayloadCodec) {
+      this.encodedPayloadCodec = encodedPayloadCodec;
+      return this;
+    }
+
     public SendSignedRequest build() {
+      Objects.requireNonNull(encodedPayloadCodec, "EncodedPayloadCodec is required");
       Objects.requireNonNull(signedData, "Signed data is required");
       Objects.requireNonNull(recipients, "recipients is required");
       Objects.requireNonNull(privacyMode, "privacyMode is required");
@@ -129,6 +140,11 @@ public interface SendSignedRequest {
         @Override
         public Set<PublicKey> getMandatoryRecipients() {
           return Set.copyOf(mandatoryRecipients);
+        }
+
+        @Override
+        public EncodedPayloadCodec getEncodedPayloadCodec() {
+          return encodedPayloadCodec;
         }
       };
     }
